<resources>
    <string name="app_name">Cartão de Visita</string>

    <string name="icon_add">Icone de adicionar</string>
    <string name="icon_close">Icone de fechar</string>

    <string name="txt_new_card">Novo cartão</string>
    <string name="txt_name">Nome</string>

    <string name="btn_confirm">Confirmar</string>

    <string name="label_phone">Telefone</string>
    <string name="label_email">E-mail</string>
    <string name="label_color">Cor</string>
    <string name="label_business_cards">Cartão de Visitas</string>
    <string name="label_business">Empresa</string>
    <string name="label_show_sucess">Cartão cadastrado com sucesso</string>
    <string name="label_share_to">Compartilhar</string>
</resources>